--- a/_posts/2020-08-08-index.md
+++ b/_posts/2020-08-08-index.md
@@ -1,15 +1,14 @@
 ---
-title: Hello
-# layout: post
+title: Hello Blogging
+layout: post
 description: First post
+author_profile: true
 ---
 
-# Hello Blogging
+## Am I a blogger now?
 
 This page is my first attempt at blogging. I haven't decided yet what I will be posting here. I have few ideas, yet no idea where to start. Probably will start by tweaking visual aspects.
 
 Currently I'm using Jekyll to generate sites from markdown files. This sounds like easy way for starting blogging right away. Just pick a theme and you are ready to go. Just like I did.
 
-In future I will probably overide files of this theme. For example something like adding a little visualisation to my posts. But I wouldn't look ahead this far right now. Untill I finish work on next post that's about it.
-
-Request you later
+In future I will probably override files of this theme. For example something like adding a little visualisation to my posts. But I wouldn't look ahead this far right now. Until I finish work on next post that's about it.
