Moving first post to proper date

--- a/_posts/2019-08-11-index.md
+++ b/_posts/2019-08-11-index.md
@@ -1,9 +1,11 @@
 ---
 title: Hello Blogging
 layout: post
-description: First post
-author_profile: true
 ---
+
+Introduction and vague plans
+
+<!--END_EXCERPT-->
 
 ## Am I a blogger now?
 
