Moving excerpt to Front Matter

--- a/_posts/2019-08-11-index.md
+++ b/_posts/2019-08-11-index.md
@@ -1,11 +1,8 @@
 ---
 title: Hello Blogging
 layout: post
+excerpt: Introduction and vague plans for this site
 ---
-
-Introduction and vague plans
-
-<!--END_EXCERPT-->
 
 ## Am I a blogger now?
 
