--- a/_posts/2020-08-30-yaml_101.md
+++ b/_posts/2020-08-30-yaml_101.md
@@ -1,5 +1,6 @@
 ---
 title: YAML 101
+author: 1stDimension
 excerpt: Introduction to Yaml data serialization standard
 date: 2020-08-30 22:02 +0200
 ---
