small fixes in yaml_101 post

--- a/_posts/2020-08-30-yaml_101.md
+++ b/_posts/2020-08-30-yaml_101.md
@@ -30,11 +30,13 @@ YAML 1.2 specification mentions a few goals
 
 ## Basic Syntax
 
-The main reason behind YAML is data structure representation. There are basically 3 structures sequence,
+The main reason behind YAML is data structure representation. There are basically 3 structures: sequence,
 map(mapping) and variable, actual document itself is just a big map. As I mentioned previously valid
 JSON is a valid YAML, but YAML can do much more with much less characters. First of all, identifiers for
 structures don't have to be enclosed in double quotes. Brackets can also be skipped, instead of special
-formatting of the file is used. An identifier ends with ":" and non zero number of whitespace characters
+formatting of the file is used.
+
+An identifier ends with ":" and non zero number of whitespace characters
 after witch formatting determines the structure. If value is in the same line structure created is
 variable. If after ":" newline character is present and some following lines have variables defined in
 them with the same level of indentation but higher than "parent" identifier, this construct is a mapping.
