Fixing inline array not being oneline

--- a/_posts/2020-08-30-yaml_101.md
+++ b/_posts/2020-08-30-yaml_101.md
@@ -74,8 +74,7 @@ You can create a sequence and a map inline using syntax similar to JSON. This sy
 of documents independent from formatting, albeit it's less clear this way.
 
 ```yaml
-array: [ mapZero: {key0: {subkey0: s0, subkey1: s1}}, mapOne:  {key0: {subkey0: s0, subkey1: s1}}
-]
+array: [ mapZero: {key0: {subkey0: s0, subkey1: s1}}, mapOne:  {key0: {subkey0: s0, subkey1: s1}}]
 ```
 Latter 2 snippets of yaml are interchangeable.
 
